aos horizontal scroll fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,13 +12,16 @@ body {
     --button-text-color: var(--background-color);
     --transition-delay: 1s;
 
-    margin: 0;
     font-family: 'Poppins', sans-serif;
     transition: var(--transition-delay);
 
     background-color: var(--background-color);
     color: var(--text-color);
+
+    margin: auto;
+    width: 100%;
     
+    overflow-x: hidden;
 
 }
 
@@ -98,6 +101,8 @@ p {
     display: flex;
     justify-content: right;
     min-width: 200px;
+
+    
 }
 
 .theme-toggle-button {
@@ -112,6 +117,7 @@ p {
     transform: scale(1);
     line-height: 0;
     padding: 0px 20px;
+    
 
 }
 
@@ -133,6 +139,7 @@ p {
     left: 0;
 
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+    
 }
 
 .site-title {
@@ -188,10 +195,13 @@ p {
     justify-content: right;
     align-items: center;
     z-index: 1;
+
 }
 
 .hamburger-menu {
     position: fixed;
+    
+    left: 0;
     top: -200px;
     width: 100%;
     flex-direction: column;
@@ -201,6 +211,8 @@ p {
     border-radius: 0px 0px 20px 20px;
     
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+
+    
     
 }
 
@@ -218,6 +230,8 @@ p {
     border: none;
     margin: 0px;
     border-radius: 20px;
+
+    
 }
 
 .hamburger-item p {
@@ -229,6 +243,8 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    
 }
 
 .hamburger-item:hover {
@@ -271,6 +287,7 @@ svg {
     margin: auto;
     width: 80%;
     vertical-align: top;
+
 }
 
 .about-card {
@@ -394,7 +411,6 @@ svg {
     .hamburger-item {
         display: block;
     }
-
     .hamburger-item .theme-toggle-button:hover {
         color: white;
     }
